--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "Cats Studio",
   "license": "MIT",
   "dependencies": {
-    "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.31",
+    "react": "^18.2.0",
     "tsc": "^2.0.4",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.31"
   }
 }
