--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
       with:
         node-version:  16.x
         cache: 'npm'
-    - run: npm ci
+    - run: npm i .
     - run: npm run build --if-present
