--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
         node-version:  16.x
         cache: 'npm'
     - run: npm i .
-    - run: npm run build --if-present
+    - run: npm run build
