--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "cats-react-hooks",
-  "version": "1.0.1",
+  "version": "0.0.0-development",
   "description": "",
   "main": "dist/index.js",
   "types": "./types",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iojuedioe9rd/cats-react-hooks.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc src/index.ts --declaration --declarationDir ./types --outDir ./dist --target ES6 --allowSyntheticDefaultImports"
+    "build": "tsc src/index.ts --declaration --declarationDir ./types --outDir ./dist --target ES6 --allowSyntheticDefaultImports",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
   "author": "Cats Studio",
@@ -17,6 +22,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.31"
+    "@types/react": "^18.2.31",
+    "semantic-release": "^22.0.5"
   }
 }
