--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cats-react-hooks",
-  "version": "0.0.0-development",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "./types",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iojuedioe9rd/cats-react-hooks.git"
+    "url": "https://github.com/iojuedioe9rd/cats-react-hooks"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
