--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' }}
-    needs: [quality]
+    #needs: [quality]
     steps: 
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
