--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,3 +43,4 @@ jobs:
       env: 
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GIT_CREDENTIALS: ${{secrets.GIT_CREDENTIALS	}}
